--- a/src/main/resources/templates/question_list.html
+++ b/src/main/resources/templates/question_list.html
@@ -32,7 +32,7 @@
                       th:text="${#lists.size(question.answerList)}">
                 </span>
             </td>
-            <td th:text></td>
+            <td th:text="${question.getViews()}"></td>
             <td><span th:if="${question.author != null}" th:text="${question.author.username}"></span></td>
             <td th:text="${#temporals.format(question.createDate, 'yyyy-MM-dd HH:mm')}"></td>
         </tr>
