--- a/src/main/resources/templates/login_form.html
+++ b/src/main/resources/templates/login_form.html
@@ -15,6 +15,10 @@
             <input type="password" name="password" id="password" class="form-control">
         </div>
         <button type="submit" class="btn btn-primary">로그인</button>
+
     </form>
+    <a th:href="${kakao}">
+        <img src="/kakao_login_medium_narrow.png" >
+    </a>
 </div>
 </html>
